src/objects/AF_Bonus_Threshold__c.object
<CustomObject>
    <description>Will represent the threshold bonus targets for a brand estimate. There can be one or more thresholds per brand estimate, on a country by country basis.</description>
    <fields>
        <fullName>AF_Agency_Brand_Fiscal_Year__c</fullName>
        <formula>Agency_Name__r.Name &amp; &quot;-&quot; &amp;  Brand_Name__r.Name &amp; &quot;-&quot; &amp;   Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agency Brand Fiscal Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Bonusable_Fee__c</fullName>
        <description>AgencyFee#GLOBAL#To store the values for Bonusable Fee</description>
        <label>Bonusable Fee</label>
        <picklist>
            <picklistValues>
                <fullName>Traditional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>AF_Brand_Estimate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>AgencyFee#GLOBAL#To Store the values for Brand Estimate</description>
        <label>Brand Estimate</label>
        <referenceTo>AF_Brand_Estimate__c</referenceTo>
        <relationshipLabel>Bonus Thresholds</relationshipLabel>
        <relationshipName>Bonus_Thresholds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AF_Category_Name__c</fullName>
        <formula>Brand_Name__r.AF_Category_Brands__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Category__c</fullName>
        <description>Stores the Category</description>
        <formula>Brand_Name__r.AF_Category_Brands__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Country_Full_Name__c</fullName>
        <description>AgencyFee#GLOBAL#To store the full name of the Country.</description>
        <label>Country Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>AgencyFee#GLOBAL#To Store the Different Countries.</description>
        <label>Country</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AF_Entity__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Unilever Entity</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AF_Entity__c</referenceTo>
        <relationshipLabel>Bonus Thresholds</relationshipLabel>
        <relationshipName>Bonus_Thresholds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AF_Digital__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To include Digital in Bonus Calculation</description>
        <label>Digital</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AF_Minimum__c</fullName>
        <description>AgencyFee#GLOBAL#To store the Minimum values for Bonus Threshold</description>
        <label>Minimum</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_No_of_Sub_Results__c</fullName>
        <label>No of Sub Results</label>
        <summaryForeignKey>AF_Sub_Result__c.AF_Bonus_Threshold__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AF_Outstanding__c</fullName>
        <description>AgencyFee#GLOBAL#To store the Outstanding values related to Bonus Threshold</description>
        <label>Outstanding</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Pilot_Model__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Stores is Brand Estimate is Pilot Model or not</description>
        <label>Pilot Model</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AF_Stretching__c</fullName>
        <description>AgencyFee#GLOBAL#To store the Stretching values related to Bonus Threshold</description>
        <label>Stretching</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Sub_Result_Total_Bonus_Value__c</fullName>
        <label>Sub Result - Total Bonus Value</label>
        <summarizedField>AF_Sub_Result__c.AF_Total_Bonus_Value__c</summarizedField>
        <summaryForeignKey>AF_Sub_Result__c.AF_Bonus_Threshold__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AF_Sub_Result_Total_Bonusable_Fee__c</fullName>
        <label>Sub Result - Total Bonusable Fee</label>
        <summarizedField>AF_Sub_Result__c.AF_Bonusable_Fees__c</summarizedField>
        <summaryFilterItems>
            <field>AF_Sub_Result__c.AF_Period__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>AF_Sub_Result__c.AF_Bonus_Threshold__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AF_Traditional__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To include Traditional in Bonus Calculation</description>
        <label>Traditional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AF_UniqueHiddenField__c</fullName>
        <formula>AF_Country__c&amp;&quot;::&quot;&amp;Agency_Name__c&amp;&quot;::&quot;&amp;  Brand_Name__c &amp;&quot;::&quot;&amp;Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AF_UniqueHiddenField</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Unique_Thresholds__c</fullName>
        <description>Used for making unique combination of Unilever Entity,Agency,Brand and Year</description>
        <externalId>true</externalId>
        <label>Unique Thresholds</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AF_of_Bonus_Result__c</fullName>
        <description>This is used to store number of Bonus Result records which have Bonus Matrix related to Bonus Threshold .</description>
        <label># of Bonus Result</label>
        <summaryFilterItems>
            <field>AF_Bonus_Results__c.AF_of_Bonus_Matrix__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>AF_Bonus_Results__c.AF_Bonus_Thresholds__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Agency_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores name of the Agency</description>
        <label>Agency Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Bonus Thresholds</relationshipLabel>
        <relationshipName>Bonus_Thresholds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bonus_Measure__c</fullName>
        <description>Which measure is to be used in the Bonus Calculation</description>
        <label>Bonus Measure</label>
        <picklist>
            <picklistValues>
                <fullName>% of Turnover Gaining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Innovative/White Space Turnover (€M Absolute)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Share MAT (% Absolute)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Share MAT (Bps Change)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turnover (€M Absolute)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USG%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weighted Average</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Brand_Agency_Combination__c</fullName>
        <description>Stores key to make lookup to Base Fee easier</description>
        <formula>Brand_Name__c +&apos;::&apos;+ Agency_Name__c +&apos;::&apos;+ Year__c</formula>
        <label>Brand Agency Combination</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores the Brand Name</description>
        <label>Brand Name</label>
        <referenceTo>AF_Category_Brand__c</referenceTo>
        <relationshipLabel>Bonus Thresholds</relationshipLabel>
        <relationshipName>Bonus_Thresholds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country_Name__c</fullName>
        <description>Stores the Country name . Used for reporting</description>
        <formula>text(AF_Country__r.AF_Country__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReadBrandID__c</fullName>
        <formula>CASESAFEID(Brand_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ReadBrandID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReadCountryID__c</fullName>
        <formula>CASESAFEID( AF_Country__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ReadCountryID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RealAgencyID__c</fullName>
        <formula>CASESAFEID(Agency_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RealAgencyID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Key_Migration__c</fullName>
        <externalId>true</externalId>
        <label>Unique Key - Migration</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <description>Stores Fiscal Year</description>
        <label>Fiscal Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>key</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>real_agency__c</fullName>
        <formula>CASESAFEID(Agency_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>real agency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>real_brand__c</fullName>
        <formula>CASESAFEID( Brand_Name__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>real brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>real_country__c</fullName>
        <formula>CASESAFEID( AF_Country__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>real country</label>
        <type>Text</type>
    </fields>
    <label>Bonus Threshold</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Brand_Name__c</columns>
        <columns>NAME</columns>
        <columns>AF_Country__c</columns>
        <columns>AF_Brand_Estimate__c</columns>
        <columns>Agency_Name__c</columns>
        <columns>AF_Bonusable_Fee__c</columns>
        <columns>Bonus_Measure__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Bonus Threshold Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bonus Thresholds</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>